[package]
name = "astrafoto-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
reqwest = "0.12"
dotenvy = "0.15.7"
async-mailer = "0.5"
log = "0.4.26"
pretty_env_logger = "0.5.0"
uuid = { version = "1.16.0", features = ["v4"] }
